# log-demultiplexer

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: demultiplexer_bench.rs  parser_bench.rs  udp_bench.rs
src/: conf.rs  consumers.rs  demultiplexer.rs  lib.rs  main.rs  parser.rs  persist.rs  udp_listener.rs
